--- a/src/shared/api/_includes/atd/dune
+++ b/src/shared/api/_includes/atd/dune
@@ -1,8 +1,8 @@
 (rule
  (alias atd)
  (targets
-  api_bs.ml
-  api_bs.mli
+  api_mel.ml
+  api_mel.mli
   api_v.ml
   api_v.mli
   api_t.ml
@@ -13,6 +13,6 @@
  (action
   (concurrent
    (run atdgen -v %{deps})
-   (run atdgen -bs %{deps})
+   (run atdgen -mel %{deps})
    (run atdgen -t %{deps})
    (run atdgen -j -j-std %{deps}))))
