--- a/dune
+++ b/dune
@@ -1,7 +1,7 @@
 (env
- (static
-  (flags
-   (:standard -ccopt -static))))
+ (release
+  (env-vars
+   (BUILD_MODE "production"))))
 
 (dirs :standard \ output)
 
