--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -2,6 +2,8 @@ services:
   scrum-cards:
     container_name: scrum-cards
     image: ${IMAGE}
+    volumes:
+      - games-data:/usr/app/db
     environment:
       SESSION_SECRET: ${SESSION_SECRET}
     labels:
@@ -13,6 +15,10 @@ services:
       - "traefik.http.services.scrum-cards.loadbalancer.server.port=80"
     networks:
       - web
+
+volumes:
+  games-data:
+    name: games-data
 
 networks:
   web:
