fix: add sqlite-dev to build dependencies

--- a/deploy/docker/Dockerfile
+++ b/deploy/docker/Dockerfile
@@ -3,7 +3,7 @@ FROM ocaml/opam:alpine-ocaml-4.14-flambda AS build
 WORKDIR /usr/app
 
 RUN sudo apk add --no-cache --update \
-	make linux-headers pkgconfig musl-dev gmp-dev libev-dev libressl-dev openssl nodejs npm
+	make linux-headers pkgconfig musl-dev gmp-dev libev-dev sqlite-dev nodejs npm
 
 ADD --chown=opam scrum-cards.opam package.json package-lock.json ./
 
